--- a/src/css/components/_header.css
+++ b/src/css/components/_header.css
@@ -16,13 +16,13 @@
   justify-content: space-between;
   margin: 0 auto;
   max-width: 1340px;
-  padding: 25px 40px;
+  padding: 1.4rem 2.8rem;
   position: relative;
 }
 
 @media screen and (max-width: 767px) {
   .header__container {
-    padding: 20px;
+    padding: 1.4rem;
   }
 }
 
@@ -30,6 +30,7 @@
 
 .header__logo {
   margin-right: 20px;
+  max-width: 250px;
 }
 
 .header__logo .logo-company-name {
@@ -60,16 +61,6 @@
   margin-left: 20px;
 }
 
-@media(max-width: 767px) {
-  .header__language-switcher {
-    margin-left: auto;
-    margin-right: 20px;
-    -webkit-box-ordinal-group: 3;
-    -ms-flex-order: 2;
-    order: 2;
-  }
-}
-
 .header__language-switcher .lang_switcher_class {
   position: static;
 }
@@ -79,14 +70,6 @@
   border: 1px solid #FFFFFF;
   border-radius: 50%;
   margin-top: 5px;
-}
-
-@media(max-width: 767px) {
-  .header__language-switcher .lang_switcher_class .globe_class {
-    height: 24px;
-    margin-top: 0;
-    width: 24px;
-  }
 }
 
 .header__language-switcher .lang_list_class {
@@ -109,23 +92,9 @@
   visibility: hidden;
 }
 
-@media(max-width: 767px) {
-  .header__language-switcher .lang_list_class {
-    border: 0;
-    border-radius: 0;
-  }
-}
-
 .header__language-switcher:hover .lang_list_class {
   opacity: 1;
   visibility: visible;
-}
-
-@media(max-width: 767px) {
-  .header__language-switcher:hover .lang_list_class {
-    opacity: 0;
-    visibility: hidden;
-  }
 }
 
 .header__language-switcher .lang_list_class:after,
@@ -140,27 +109,9 @@
   padding: 10px;
 }
 
-@media(max-width: 767px) {
-  .header__language-switcher .lang_list_class li {
-    border-top-color: #D0D0D0;
-    border-top-style: solid;
-    border-top-width: 1px;
-    padding: 7px 30px;
-  }
-}
-
 .header__language-switcher .lang_list_class li:first-child {
   border-top: none;
   padding-top: 10px;
-}
-
-@media(max-width: 767px) {
-  .header__language-switcher .lang_list_class li:first-child {
-    border-top-color: #D0D0D0;
-    border-top-style: solid;
-    border-top-width: 1px;
-    padding-top: 7px;
-  }
 }
 
 .header__language-switcher .lang_list_class li:last-child {
@@ -174,20 +125,8 @@
   transition: background-color 0.3s;
 }
 
-@media(max-width: 767px) {
-  .header__language-switcher .lang_list_class li:hover {
-    background-color: transparent;
-  }
-}
-
 .header__language-switcher .lang_list_class li:hover a {
   color: #FFFFFF;
-}
-
-@media(max-width: 767px) {
-  .header__language-switcher .lang_list_class li:hover a {
-    color: #FFFFFF;
-  }
 }
 
 .header__language-switcher-label-current,
@@ -207,12 +146,6 @@
   position: relative;
 }
 
-@media(max-width: 767px) {
-  .header__language-switcher-label {
-    position: static;
-  }
-}
-
 .header__language-switcher-label-current {
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -222,12 +155,6 @@
   display: flex;
   line-height: 2;
   margin-left: 10px;
-}
-
-@media(max-width: 767px) {
-  .header__language-switcher-label-current {
-    display: none;
-  }
 }
 
 .header__language-switcher-label-current:hover,
@@ -250,6 +177,60 @@
 }
 
 @media(max-width: 767px) {
+  .header__language-switcher {
+    margin-left: auto;
+    margin-right: 20px;
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+  }
+
+  .header__language-switcher .lang_switcher_class .globe_class {
+    height: 24px;
+    margin-top: 0;
+    width: 24px;
+  }
+
+  .header__language-switcher .lang_list_class {
+    border: 0;
+    border-radius: 0;
+  }
+
+  .header__language-switcher:hover .lang_list_class {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .header__language-switcher .lang_list_class li {
+    border-top-color: #D0D0D0;
+    border-top-style: solid;
+    border-top-width: 1px;
+    padding: 7px 30px;
+  }
+
+  .header__language-switcher .lang_list_class li:first-child {
+    border-top-color: #D0D0D0;
+    border-top-style: solid;
+    border-top-width: 1px;
+    padding-top: 7px;
+  }
+
+  .header__language-switcher .lang_list_class li:hover {
+    background-color: transparent;
+  }
+
+  .header__language-switcher .lang_list_class li:hover a {
+    color: #FFFFFF;
+  }
+
+  .header__language-switcher-label {
+    position: static;
+  }
+
+  .header__language-switcher-label-current {
+    display: none;
+  }
+
   .header__language-switcher.open .lang_list_class {
     opacity: 1;
     visibility: visible;
