Renaming module folders and template names/labels

--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -1,14 +1,14 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Pillar Page
+  label: Pillar
   screenshotPath: ../images/template-previews/pillar-page.png
 -->
 {% extends "./layouts/base.html" %}
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class="body-container body-container-pillar-page", label="Main section" %}
+  {% dnd_area "dnd_area" class="body-container body-container-pillar", label="Main section" %}
 
     {# Banner Section #}
     {% dnd_section max_width=760,
