--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: About Page
+  label: About
   screenshotPath: ../images/template-previews/about.png
 -->
 {% extends "./layouts/base.html" %}
