--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Contact Page
+  label: Contact
   screenshotPath: ../images/template-previews/contact.png
 -->
 {% extends "./layouts/base.html" %}
