--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,14 +1,14 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Home Page
+  label: Home
   screenshotPath: ../images/template-previews/home-page.png
 -->
 {% extends "./layouts/base.html" %}
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class="body-container body-container-homepage", label="Main section" %}
+  {% dnd_area "dnd_area" class="body-container body-container-home", label="Main section" %}
 
     {# Banner Section #}
     {% dnd_section max_width=760,
