--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -1,7 +1,7 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Pricing Page
+  label: Pricing
   screenshotPath: ../images/template-previews/pricing.png
 -->
 {% extends "./layouts/base.html" %}
