Swapping module field references

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -194,7 +194,7 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module
-            path="../modules/Team Member",
+            path="../modules/team-member",
             offset=0,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
@@ -208,7 +208,7 @@
           %}
           {% end_dnd_module %}
           {% dnd_module
-            path="../modules/Team Member",
+            path="../modules/team-member",
             offset=4,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
@@ -222,7 +222,7 @@
           %}
           {% end_dnd_module %}
           {% dnd_module
-            path="../modules/Team Member",
+            path="../modules/team-member",
             offset=8,
             width=4,
             flexbox_positioning="MIDDLE_CENTER",
