--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -11,7 +11,7 @@
   <div class="body-container body-container-blog-post">
 
     {% module "blog_post_banner"
-      path="../modules/Blog Post Banner",
+      path="../modules/blog-post-banner",
       custom_bg_image={
         "src": get_asset_url("../images/blog-post-banner.png")
       }
@@ -73,7 +73,7 @@
     </div>
 
     {% module "blog_cta"
-      path="../modules/Call to Action Banner",
+      path="../modules/call-to-action-banner",
       cta_banner_image={
         "src": get_asset_url("../images/phone.png"),
         "alt": "Mobile phone"
@@ -82,7 +82,7 @@
       cta_button="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
     %}
 
-    {% module "blog_related_posts" path="../modules/Blog Related Posts" %}
+    {% module "blog_related_posts" path="../modules/blog-related-posts" %}
 
   </div>
 </main>
