--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -86,7 +86,7 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="../modules/Icon",
+                path="../modules/icon",
                 flexbox_positioning="MIDDLE_CENTER",
                 icon_type={
                     "name": "map-pin",
@@ -114,7 +114,7 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path="../modules/Icon",
+                path="../modules/icon",
                 flexbox_positioning="MIDDLE_CENTER",
                 icon_type={
                     "name": "phone",
@@ -142,7 +142,7 @@
           %}
             {% dnd_row %}
               {% dnd_module
-                path='../modules/Icon',
+                path='../modules/icon',
                 flexbox_positioning="MIDDLE_CENTER",
                 icon_type={
                     "name": "envelope",
