--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -25,7 +25,7 @@
             {# Social Follow #}
             <div class="footer__follow-me">
               {% module "footer_social"
-                path="../../modules/Social follow",
+                path="../../modules/social-follow",
                 social_links=[
                   {"social_account": "facebook-f"},
                   {"social_account": "linkedin-in"},
