--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -27,7 +27,7 @@
         </label>
         <div class="header__navigation">
           {% module "header_navigation_primary"
-            path="../../modules/Menu section",
+            path="../../modules/menu-section",
             label="Primary Navigation"
           %}
         </div>
