--- a/src/templates/pillar.html
+++ b/src/templates/pillar.html
@@ -64,7 +64,7 @@
         width=4
       %}
         {% dnd_row %}
-          {% dnd_module path="../modules/Pillar Menu",
+          {% dnd_module path="../modules/pillar-menu",
             flexbox_positioning="MIDDLE_LEFT",
           %}
           {% end_dnd_module %}
@@ -104,7 +104,7 @@
             width=8
           %}
             {% dnd_row %}
-              {% dnd_module path="../modules/Pillar Section Title",
+              {% dnd_module path="../modules/pillar-section-title",
                 flexbox_positioning="MIDDLE_LEFT",
                 pillar_section_title="What Can I Automate?"
               %}
